[package]
name = "echo-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["core", "util"]
core = []
util = []

[dependencies]
echo-core = { path = "../echo-core", version = "0.1.0" }
futures-core = "0.3"
pin-project-lite = "0.2"
