[package]
name = "echo-sse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
echo-core = { path = "../echo-core", version = "0.1.0" }
tokio = { version = "1", default-features = false, features = ["time"] }
futures-core = "0.3"
pin-project-lite = "0.2"
mime = "0.3"
