[package]
name = "echo-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
echo-core = { path = "../echo-core", version = "0.1.0" }
hyper = { version = "1.0.0-rc.2" }
tokio = { version = "1", features = ["rt"] }
tokio-tungstenite = "0.18.0"
futures-util = "0.3"
sha1 = "0.10"
base64 = "0.21"
