[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["macros", "server"]
macros = ["echo-macros"]
server = ["echo-server"]
multipart = ["echo-multipart"]
sse = ["echo-sse"]
ws = ["echo-ws"]

[dependencies]
echo-core = { path = "../echo-core", version = "0.1.0" }
echo-middleware = { path = "../echo-middleware", version = "0.1.0", default-features = false, features = [
    "core",
    "util",
] }
echo-route = { path = "../echo-route", version = "0.1.0" }
echo-macros = { path = "../echo-macros", version = "0.1.0", optional = true }
echo-server = { path = "../echo-server", version = "0.1.0", optional = true }
echo-multipart = { path = "../echo-multipart", version = "0.1.0", optional = true }
echo-sse = { path = "../echo-sse", version = "0.1.0", optional = true }
echo-ws = { path = "../echo-ws", version = "0.1.0", optional = true }
mime = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
futures-util = "0.3"
